Follow up to #142: Make sure overflow: visible applies for .vega-embed

--- a/shinywidgets/static/shinywidgets.css
+++ b/shinywidgets/static/shinywidgets.css
@@ -7,6 +7,16 @@
 }
 
 /*
+* At least one exception is .vega-embed, which needs to be visible.
+* This especially important for things like FacetChart, where responsive
+* sizing isn't supported.
+* https://github.com/altair-viz/altair/blob/5dac297/altair/jupyter/jupyter_chart.py#L103-L106
+*/
+.shiny-ipywidget-output:has(> .vega-embed) {
+  overflow: visible;
+}
+
+/*
 * The .forward-fill-potential class gets added after the widget gets displayed (since we
 * don't know if it's going to fill until then). Also note that we intentionally do this
 * instead of adding html-fill-container/html-fill-item classes to these elements since
